--- a/style.css
+++ b/style.css
@@ -27,10 +27,11 @@ section {
 }
 
 #personal h4 {
-    font-size: 20px;
-    padding: 5px 20px;
+    font-size: 23px;
+    padding: 10px 20px;
     border-radius: 0%;
     font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
 }
 
 #personal span {
@@ -39,6 +40,7 @@ section {
     background-color: red;
     color: red;
     cursor: pointer;
+display: inline-block;
 }
 
 label {
@@ -139,12 +141,12 @@ h5 {
     }
 
     #personal h4 {
-        font-size: 15px;
-        padding: 4px 10px;
+        font-size: 20px;
+        padding: 7px 10px;
     }
 
     #personal span {
         margin-left: 7px;
-        padding: 10px 10px 5px 10px;
+        padding: 8px 10px 5px 10px;
     }
 }
